scrollbard issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@
 	display: block;
   }
   body {
-	line-height: 1;
+		line-height: 1.1;
   }
   a {
 		color: inherit;
@@ -122,7 +122,7 @@
   }
   .max-width-56em {
 	max-width: 56em;
-  }
+	}
   .padding-B-p25em {
 	padding-bottom: 0.25em;
   }
@@ -265,7 +265,6 @@ ONE CLASS DOES ONE THING
 .padding-0p5-0p5-0p5-1p5em {
 	padding: 0.5em 0.5em 0.5em 1.5em;
 }
-
 .padding-T-4p5em {
 	padding-top: 4.5em;
 }
